// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App navigates to the color theme editor 1`] = `
<div
  class="px-4 py-4 h-screen overflow-y-hidden bg-neutral-200"
>
  <div
    class="mb-4"
  >
    <button
      class="mr-4 py-1 px-4 rounded-sm bg-green-100 hover:bg-green-300 text-green-500 hover:text-green-700"
    >
      Create New
    </button>
    <button
      class=" text-blue-500 hover:text-blue-800"
    >
      Copy theme to clipboard
    </button>
  </div>
  <div
    class="grid grid-cols-2 mb-4 h-full"
  >
    <div
      class="bg-slate-900 text-slate-200 font-mono px-4 py-4 mr-2 overflow-y-scroll"
    >
      <div>
        <p>
          module.exports = {
        </p>
        <div
          class="ml-4"
        >
          <div>
            <p>
              theme: {
            </p>
            <div
              class="ml-4"
            >
              <div>
                <p>
                  colors: {
                </p>
                <div
                  class="ml-4"
                >
                  <p>
                    "green" : {}
                  </p>
                  <p>
                    "blue" : {}
                  </p>
                  <button
                    class="flex items-center"
                  >
                    <span
                      class="mr-4"
                    >
                      "
                      #00695c
                      "
                    </span>
                    <span
                      class="mr-4"
                    >
                      :
                    </span>
                    <span
                      class="w-4 h-4 inline-block mr-2 rounded-sm"
                      style="background-color: rgb(0, 105, 92);"
                    />
                    <span>
                      #00695c
                      ,
                    </span>
                  </button>
                  <button
                    class="flex items-center"
                  >
                    <span
                      class="mr-4"
                    >
                      "
                      #039be5
                      "
                    </span>
                    <span
                      class="mr-4"
                    >
                      :
                    </span>
                    <span
                      class="w-4 h-4 inline-block mr-2 rounded-sm"
                      style="background-color: rgb(3, 155, 229);"
                    />
                    <span>
                      #039be5
                      ,
                    </span>
                  </button>
                  <button
                    class="flex items-center"
                  >
                    <span
                      class="mr-4"
                    >
                      "
                      #1e88e5
                      "
                    </span>
                    <span
                      class="mr-4"
                    >
                      :
                    </span>
                    <span
                      class="w-4 h-4 inline-block mr-2 rounded-sm"
                      style="background-color: rgb(30, 136, 229);"
                    />
                    <span>
                      #1e88e5
                      ,
                    </span>
                  </button>
                  <button
                    class="flex items-center"
                  >
                    <span
                      class="mr-4"
                    >
                      "
                      #388e3c
                      "
                    </span>
                    <span
                      class="mr-4"
                    >
                      :
                    </span>
                    <span
                      class="w-4 h-4 inline-block mr-2 rounded-sm"
                      style="background-color: rgb(56, 142, 60);"
                    />
                    <span>
                      #388e3c
                      ,
                    </span>
                  </button>
                  <button
                    class="flex items-center"
                  >
                    <span
                      class="mr-4"
                    >
                      "
                      #536dfe
                      "
                    </span>
                    <span
                      class="mr-4"
                    >
                      :
                    </span>
                    <span
                      class="w-4 h-4 inline-block mr-2 rounded-sm"
                      style="background-color: rgb(83, 109, 254);"
                    />
                    <span>
                      #536dfe
                      ,
                    </span>
                  </button>
                  <button
                    class="flex items-center"
                  >
                    <span
                      class="mr-4"
                    >
                      "
                      #64ffda
                      "
                    </span>
                    <span
                      class="mr-4"
                    >
                      :
                    </span>
                    <span
                      class="w-4 h-4 inline-block mr-2 rounded-sm"
                      style="background-color: rgb(100, 255, 218);"
                    />
                    <span>
                      #64ffda
                      ,
                    </span>
                  </button>
                  <button
                    class="flex items-center"
                  >
                    <span
                      class="mr-4"
                    >
                      "
                      #90caf9
                      "
                    </span>
                    <span
                      class="mr-4"
                    >
                      :
                    </span>
                    <span
                      class="w-4 h-4 inline-block mr-2 rounded-sm"
                      style="background-color: rgb(144, 202, 249);"
                    />
                    <span>
                      #90caf9
                      ,
                    </span>
                  </button>
                  <button
                    class="flex items-center"
                  >
                    <span
                      class="mr-4"
                    >
                      "
                      #a5d6a7
                      "
                    </span>
                    <span
                      class="mr-4"
                    >
                      :
                    </span>
                    <span
                      class="w-4 h-4 inline-block mr-2 rounded-sm"
                      style="background-color: rgb(165, 214, 167);"
                    />
                    <span>
                      #a5d6a7
                      ,
                    </span>
                  </button>
                </div>
                <p>
                  }
                </p>
              </div>
            </div>
            <p>
              }
            </p>
          </div>
        </div>
        <p>
          }
        </p>
      </div>
    </div>
    <div>
      <div
        class="flex flex-wrap mb-8"
      >
        <button
          class="mr-1 mb-1 p-1 border-4 border-transparent"
        >
          <span
            class="w-16 h-12 block border-b"
            style="background-color: rgb(0, 105, 92);"
          />
          <span
            class="block text-xs text-center truncate bg-black text-white"
          >
            #00695c
          </span>
        </button>
        <button
          class="mr-1 mb-1 p-1 border-4 border-transparent"
        >
          <span
            class="w-16 h-12 block border-b"
            style="background-color: rgb(56, 142, 60);"
          />
          <span
            class="block text-xs text-center truncate bg-black text-white"
          >
            #388e3c
          </span>
        </button>
        <button
          class="mr-1 mb-1 p-1 border-4 border-transparent"
        >
          <span
            class="w-16 h-12 block border-b"
            style="background-color: rgb(100, 255, 218);"
          />
          <span
            class="block text-xs text-center truncate bg-black text-white"
          >
            #64ffda
          </span>
        </button>
        <button
          class="mr-1 mb-1 p-1 border-4 border-transparent"
        >
          <span
            class="w-16 h-12 block border-b"
            style="background-color: rgb(165, 214, 167);"
          />
          <span
            class="block text-xs text-center truncate bg-black text-white"
          >
            #a5d6a7
          </span>
        </button>
        <button
          class="mr-1 mb-1 p-1 border-4 border-transparent"
        >
          <span
            class="w-16 h-12 block border-b"
            style="background-color: rgb(3, 155, 229);"
          />
          <span
            class="block text-xs text-center truncate bg-black text-white"
          >
            #039be5
          </span>
        </button>
        <button
          class="mr-1 mb-1 p-1 border-4 border-transparent"
        >
          <span
            class="w-16 h-12 block border-b"
            style="background-color: rgb(30, 136, 229);"
          />
          <span
            class="block text-xs text-center truncate bg-black text-white"
          >
            #1e88e5
          </span>
        </button>
        <button
          class="mr-1 mb-1 p-1 border-4 border-transparent"
        >
          <span
            class="w-16 h-12 block border-b"
            style="background-color: rgb(83, 109, 254);"
          />
          <span
            class="block text-xs text-center truncate bg-black text-white"
          >
            #536dfe
          </span>
        </button>
        <button
          class="mr-1 mb-1 p-1 border-4 border-transparent"
        >
          <span
            class="w-16 h-12 block border-b"
            style="background-color: rgb(144, 202, 249);"
          />
          <span
            class="block text-xs text-center truncate bg-black text-white"
          >
            #90caf9
          </span>
        </button>
      </div>
      <div
        class="pl-2"
      >
        <button
          class="mr-4 mb-4 px-6 py-1 bg-blue-200 hover:bg-blue-400 text-sky-900 disabled:cursor-not-allowed disabled:bg-slate-500 disabled:text-slate-300"
          disabled=""
        >
          green
        </button>
        <button
          class="mr-4 mb-4 px-6 py-1 bg-blue-200 hover:bg-blue-400 text-sky-900 disabled:cursor-not-allowed disabled:bg-slate-500 disabled:text-slate-300"
          disabled=""
        >
          blue
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`App renders the default state of the first step in the wizard 1`] = `
<div>
  <div
    class="px-4 py-4 h-screen overflow-y-hidden bg-neutral-200"
  >
    <div
      class="h-10 mb-4 flex items-center"
    >
      <button
        class="mr-4 py-1 px-4 rounded-sm bg-blue-100 hover:bg-blue-300 text-blue-500 hover:text-blue-700 disabled:cursor-not-allowed disabled:bg-slate-500 disabled:text-slate-300"
        disabled=""
      >
        Group Colors
      </button>
      <button
        class="text-blue-500 hover:text-blue-700"
      >
        Load Example
      </button>
    </div>
    <div
      class="grid grid-cols-2"
      style="height: calc(100% - 56px);"
    >
      <div
        class="mr-2 flex flex-col"
      >
        <p
          class="mb-1"
        >
          Enter Group Names
        </p>
        <textarea
          class="grow w-full bg-slate-800 text-slate-200 font-mono h-80 py-2 px-4"
          placeholder="One name per line"
        />
      </div>
      <div
        class="flex flex-col"
      >
        <p
          class="mb-1"
        >
          Enter Color Values
        </p>
        <textarea
          class="grow w-full bg-slate-800 text-slate-200 font-mono h-80 py-2 px-4"
          placeholder="One color value per line"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`App renders the theme editor 1`] = `
<div>
  <div
    class="px-4 py-4 h-screen overflow-y-hidden bg-neutral-200"
  >
    <div
      class="mb-4"
    >
      <button
        class="mr-4 py-1 px-4 rounded-sm bg-green-100 hover:bg-green-300 text-green-500 hover:text-green-700"
      >
        Create New
      </button>
      <button
        class=" text-blue-500 hover:text-blue-800"
      >
        Copy theme to clipboard
      </button>
    </div>
    <div
      class="grid grid-cols-2 mb-4 h-full"
    >
      <div
        class="bg-slate-900 text-slate-200 font-mono px-4 py-4 mr-2 overflow-y-scroll"
      >
        <div>
          <p>
            module.exports = {
          </p>
          <div
            class="ml-4"
          >
            <div>
              <p>
                theme: {
              </p>
              <div
                class="ml-4"
              >
                <div>
                  <p>
                    colors: {
                  </p>
                  <div
                    class="ml-4"
                  >
                    <p>
                      "green" : {}
                    </p>
                    <p>
                      "blue" : {}
                    </p>
                    <button
                      class="flex items-center"
                    >
                      <span
                        class="mr-4"
                      >
                        "
                        #00695c
                        "
                      </span>
                      <span
                        class="mr-4"
                      >
                        :
                      </span>
                      <span
                        class="w-4 h-4 inline-block mr-2 rounded-sm"
                        style="background-color: rgb(0, 105, 92);"
                      />
                      <span>
                        #00695c
                        ,
                      </span>
                    </button>
                    <button
                      class="flex items-center"
                    >
                      <span
                        class="mr-4"
                      >
                        "
                        #039be5
                        "
                      </span>
                      <span
                        class="mr-4"
                      >
                        :
                      </span>
                      <span
                        class="w-4 h-4 inline-block mr-2 rounded-sm"
                        style="background-color: rgb(3, 155, 229);"
                      />
                      <span>
                        #039be5
                        ,
                      </span>
                    </button>
                    <button
                      class="flex items-center"
                    >
                      <span
                        class="mr-4"
                      >
                        "
                        #1e88e5
                        "
                      </span>
                      <span
                        class="mr-4"
                      >
                        :
                      </span>
                      <span
                        class="w-4 h-4 inline-block mr-2 rounded-sm"
                        style="background-color: rgb(30, 136, 229);"
                      />
                      <span>
                        #1e88e5
                        ,
                      </span>
                    </button>
                    <button
                      class="flex items-center"
                    >
                      <span
                        class="mr-4"
                      >
                        "
                        #388e3c
                        "
                      </span>
                      <span
                        class="mr-4"
                      >
                        :
                      </span>
                      <span
                        class="w-4 h-4 inline-block mr-2 rounded-sm"
                        style="background-color: rgb(56, 142, 60);"
                      />
                      <span>
                        #388e3c
                        ,
                      </span>
                    </button>
                    <button
                      class="flex items-center"
                    >
                      <span
                        class="mr-4"
                      >
                        "
                        #536dfe
                        "
                      </span>
                      <span
                        class="mr-4"
                      >
                        :
                      </span>
                      <span
                        class="w-4 h-4 inline-block mr-2 rounded-sm"
                        style="background-color: rgb(83, 109, 254);"
                      />
                      <span>
                        #536dfe
                        ,
                      </span>
                    </button>
                    <button
                      class="flex items-center"
                    >
                      <span
                        class="mr-4"
                      >
                        "
                        #64ffda
                        "
                      </span>
                      <span
                        class="mr-4"
                      >
                        :
                      </span>
                      <span
                        class="w-4 h-4 inline-block mr-2 rounded-sm"
                        style="background-color: rgb(100, 255, 218);"
                      />
                      <span>
                        #64ffda
                        ,
                      </span>
                    </button>
                    <button
                      class="flex items-center"
                    >
                      <span
                        class="mr-4"
                      >
                        "
                        #90caf9
                        "
                      </span>
                      <span
                        class="mr-4"
                      >
                        :
                      </span>
                      <span
                        class="w-4 h-4 inline-block mr-2 rounded-sm"
                        style="background-color: rgb(144, 202, 249);"
                      />
                      <span>
                        #90caf9
                        ,
                      </span>
                    </button>
                    <button
                      class="flex items-center"
                    >
                      <span
                        class="mr-4"
                      >
                        "
                        #a5d6a7
                        "
                      </span>
                      <span
                        class="mr-4"
                      >
                        :
                      </span>
                      <span
                        class="w-4 h-4 inline-block mr-2 rounded-sm"
                        style="background-color: rgb(165, 214, 167);"
                      />
                      <span>
                        #a5d6a7
                        ,
                      </span>
                    </button>
                  </div>
                  <p>
                    }
                  </p>
                </div>
              </div>
              <p>
                }
              </p>
            </div>
          </div>
          <p>
            }
          </p>
        </div>
      </div>
      <div>
        <div
          class="flex flex-wrap mb-8"
        >
          <button
            class="mr-1 mb-1 p-1 border-4 border-transparent"
          >
            <span
              class="w-16 h-12 block border-b"
              style="background-color: rgb(0, 105, 92);"
            />
            <span
              class="block text-xs text-center truncate bg-black text-white"
            >
              #00695c
            </span>
          </button>
          <button
            class="mr-1 mb-1 p-1 border-4 border-transparent"
          >
            <span
              class="w-16 h-12 block border-b"
              style="background-color: rgb(56, 142, 60);"
            />
            <span
              class="block text-xs text-center truncate bg-black text-white"
            >
              #388e3c
            </span>
          </button>
          <button
            class="mr-1 mb-1 p-1 border-4 border-transparent"
          >
            <span
              class="w-16 h-12 block border-b"
              style="background-color: rgb(100, 255, 218);"
            />
            <span
              class="block text-xs text-center truncate bg-black text-white"
            >
              #64ffda
            </span>
          </button>
          <button
            class="mr-1 mb-1 p-1 border-4 border-transparent"
          >
            <span
              class="w-16 h-12 block border-b"
              style="background-color: rgb(165, 214, 167);"
            />
            <span
              class="block text-xs text-center truncate bg-black text-white"
            >
              #a5d6a7
            </span>
          </button>
          <button
            class="mr-1 mb-1 p-1 border-4 border-transparent"
          >
            <span
              class="w-16 h-12 block border-b"
              style="background-color: rgb(3, 155, 229);"
            />
            <span
              class="block text-xs text-center truncate bg-black text-white"
            >
              #039be5
            </span>
          </button>
          <button
            class="mr-1 mb-1 p-1 border-4 border-transparent"
          >
            <span
              class="w-16 h-12 block border-b"
              style="background-color: rgb(30, 136, 229);"
            />
            <span
              class="block text-xs text-center truncate bg-black text-white"
            >
              #1e88e5
            </span>
          </button>
          <button
            class="mr-1 mb-1 p-1 border-4 border-transparent"
          >
            <span
              class="w-16 h-12 block border-b"
              style="background-color: rgb(83, 109, 254);"
            />
            <span
              class="block text-xs text-center truncate bg-black text-white"
            >
              #536dfe
            </span>
          </button>
          <button
            class="mr-1 mb-1 p-1 border-4 border-transparent"
          >
            <span
              class="w-16 h-12 block border-b"
              style="background-color: rgb(144, 202, 249);"
            />
            <span
              class="block text-xs text-center truncate bg-black text-white"
            >
              #90caf9
            </span>
          </button>
        </div>
        <div
          class="pl-2"
        >
          <button
            class="mr-4 mb-4 px-6 py-1 bg-blue-200 hover:bg-blue-400 text-sky-900 disabled:cursor-not-allowed disabled:bg-slate-500 disabled:text-slate-300"
            disabled=""
          >
            green
          </button>
          <button
            class="mr-4 mb-4 px-6 py-1 bg-blue-200 hover:bg-blue-400 text-sky-900 disabled:cursor-not-allowed disabled:bg-slate-500 disabled:text-slate-300"
            disabled=""
          >
            blue
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`App use the theme editor to group colors 1`] = `
<div>
  <div
    class="px-4 py-4 h-screen overflow-y-hidden bg-neutral-200"
  >
    <div
      class="mb-4"
    >
      <button
        class="mr-4 py-1 px-4 rounded-sm bg-green-100 hover:bg-green-300 text-green-500 hover:text-green-700"
      >
        Create New
      </button>
      <button
        class=" text-blue-500 hover:text-blue-800"
      >
        Copy theme to clipboard
      </button>
    </div>
    <div
      class="grid grid-cols-2 mb-4 h-full"
    >
      <div
        class="bg-slate-900 text-slate-200 font-mono px-4 py-4 mr-2 overflow-y-scroll"
      >
        <div>
          <p>
            module.exports = {
          </p>
          <div
            class="ml-4"
          >
            <div>
              <p>
                theme: {
              </p>
              <div
                class="ml-4"
              >
                <div>
                  <p>
                    colors: {
                  </p>
                  <div
                    class="ml-4"
                  >
                    <div>
                      <p>
                        "green" : {
                      </p>
                      <div
                        class="ml-4"
                      >
                        <button
                          class="flex items-center"
                        >
                          <span
                            class="mr-4"
                          >
                            "
                            #64ffda
                            "
                          </span>
                          <span
                            class="mr-4"
                          >
                            :
                          </span>
                          <span
                            class="w-4 h-4 inline-block mr-2 rounded-sm"
                            style="background-color: rgb(100, 255, 218);"
                          />
                          <span>
                            #64ffda
                            ,
                          </span>
                        </button>
                        <button
                          class="flex items-center"
                        >
                          <span
                            class="mr-4"
                          >
                            "
                            #a5d6a7
                            "
                          </span>
                          <span
                            class="mr-4"
                          >
                            :
                          </span>
                          <span
                            class="w-4 h-4 inline-block mr-2 rounded-sm"
                            style="background-color: rgb(165, 214, 167);"
                          />
                          <span>
                            #a5d6a7
                            ,
                          </span>
                        </button>
                      </div>
                      <p>
                        }
                      </p>
                    </div>
                    <div>
                      <p>
                        "blue" : {
                      </p>
                      <div
                        class="ml-4"
                      >
                        <button
                          class="flex items-center"
                        >
                          <span
                            class="mr-4"
                          >
                            "
                            #039be5
                            "
                          </span>
                          <span
                            class="mr-4"
                          >
                            :
                          </span>
                          <span
                            class="w-4 h-4 inline-block mr-2 rounded-sm"
                            style="background-color: rgb(3, 155, 229);"
                          />
                          <span>
                            #039be5
                            ,
                          </span>
                        </button>
                        <button
                          class="flex items-center"
                        >
                          <span
                            class="mr-4"
                          >
                            "
                            #90caf9
                            "
                          </span>
                          <span
                            class="mr-4"
                          >
                            :
                          </span>
                          <span
                            class="w-4 h-4 inline-block mr-2 rounded-sm"
                            style="background-color: rgb(144, 202, 249);"
                          />
                          <span>
                            #90caf9
                            ,
                          </span>
                        </button>
                      </div>
                      <p>
                        }
                      </p>
                    </div>
                    <button
                      class="flex items-center"
                    >
                      <span
                        class="mr-4"
                      >
                        "
                        #00695c
                        "
                      </span>
                      <span
                        class="mr-4"
                      >
                        :
                      </span>
                      <span
                        class="w-4 h-4 inline-block mr-2 rounded-sm"
                        style="background-color: rgb(0, 105, 92);"
                      />
                      <span>
                        #00695c
                        ,
                      </span>
                    </button>
                    <button
                      class="flex items-center"
                    >
                      <span
                        class="mr-4"
                      >
                        "
                        #1e88e5
                        "
                      </span>
                      <span
                        class="mr-4"
                      >
                        :
                      </span>
                      <span
                        class="w-4 h-4 inline-block mr-2 rounded-sm"
                        style="background-color: rgb(30, 136, 229);"
                      />
                      <span>
                        #1e88e5
                        ,
                      </span>
                    </button>
                    <button
                      class="flex items-center"
                    >
                      <span
                        class="mr-4"
                      >
                        "
                        #388e3c
                        "
                      </span>
                      <span
                        class="mr-4"
                      >
                        :
                      </span>
                      <span
                        class="w-4 h-4 inline-block mr-2 rounded-sm"
                        style="background-color: rgb(56, 142, 60);"
                      />
                      <span>
                        #388e3c
                        ,
                      </span>
                    </button>
                    <button
                      class="flex items-center"
                    >
                      <span
                        class="mr-4"
                      >
                        "
                        #536dfe
                        "
                      </span>
                      <span
                        class="mr-4"
                      >
                        :
                      </span>
                      <span
                        class="w-4 h-4 inline-block mr-2 rounded-sm"
                        style="background-color: rgb(83, 109, 254);"
                      />
                      <span>
                        #536dfe
                        ,
                      </span>
                    </button>
                  </div>
                  <p>
                    }
                  </p>
                </div>
              </div>
              <p>
                }
              </p>
            </div>
          </div>
          <p>
            }
          </p>
        </div>
      </div>
      <div>
        <div
          class="flex flex-wrap mb-8"
        >
          <button
            class="mr-1 mb-1 p-1 border-4 border-transparent"
          >
            <span
              class="w-16 h-12 block border-b"
              style="background-color: rgb(0, 105, 92);"
            />
            <span
              class="block text-xs text-center truncate bg-black text-white"
            >
              #00695c
            </span>
          </button>
          <button
            class="mr-1 mb-1 p-1 border-4 border-transparent"
          >
            <span
              class="w-16 h-12 block border-b"
              style="background-color: rgb(56, 142, 60);"
            />
            <span
              class="block text-xs text-center truncate bg-black text-white"
            >
              #388e3c
            </span>
          </button>
          <button
            class="mr-1 mb-1 p-1 hidden"
          >
            <span
              class="w-16 h-12 block border-b"
              style="background-color: rgb(100, 255, 218);"
            />
            <span
              class="block text-xs text-center truncate bg-black text-white"
            >
              #64ffda
            </span>
          </button>
          <button
            class="mr-1 mb-1 p-1 hidden"
          >
            <span
              class="w-16 h-12 block border-b"
              style="background-color: rgb(165, 214, 167);"
            />
            <span
              class="block text-xs text-center truncate bg-black text-white"
            >
              #a5d6a7
            </span>
          </button>
          <button
            class="mr-1 mb-1 p-1 hidden"
          >
            <span
              class="w-16 h-12 block border-b"
              style="background-color: rgb(3, 155, 229);"
            />
            <span
              class="block text-xs text-center truncate bg-black text-white"
            >
              #039be5
            </span>
          </button>
          <button
            class="mr-1 mb-1 p-1 border-4 border-transparent"
          >
            <span
              class="w-16 h-12 block border-b"
              style="background-color: rgb(30, 136, 229);"
            />
            <span
              class="block text-xs text-center truncate bg-black text-white"
            >
              #1e88e5
            </span>
          </button>
          <button
            class="mr-1 mb-1 p-1 border-4 border-transparent"
          >
            <span
              class="w-16 h-12 block border-b"
              style="background-color: rgb(83, 109, 254);"
            />
            <span
              class="block text-xs text-center truncate bg-black text-white"
            >
              #536dfe
            </span>
          </button>
          <button
            class="mr-1 mb-1 p-1 hidden"
          >
            <span
              class="w-16 h-12 block border-b"
              style="background-color: rgb(144, 202, 249);"
            />
            <span
              class="block text-xs text-center truncate bg-black text-white"
            >
              #90caf9
            </span>
          </button>
        </div>
        <div
          class="pl-2"
        >
          <button
            class="mr-4 mb-4 px-6 py-1 bg-blue-200 hover:bg-blue-400 text-sky-900 disabled:cursor-not-allowed disabled:bg-slate-500 disabled:text-slate-300"
            disabled=""
          >
            green
          </button>
          <button
            class="mr-4 mb-4 px-6 py-1 bg-blue-200 hover:bg-blue-400 text-sky-900 disabled:cursor-not-allowed disabled:bg-slate-500 disabled:text-slate-300"
            disabled=""
          >
            blue
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
